# stonefish_rl

./: CMakeLists.txt
Resources/g500/scenarios/: girona500_basic.scn
Resources/g500/scenarios/vehicles/: girona500.scn  girona500_eca5emicro_gripper.scn
Resources/girona_ds/scenarios/: ds.scn  girona500.scn  girona500_docking_sim_pool.scn  goal.scn
executables/: main.cpp  test_sender.cpp
include/: ActuatorController.h  CommandProcessor.h  CommonTypes.h  ConfigLoader.h  Sender.h  StateManager.h  StonefishRL.h  ZMQCommunicator.h
include/observations/: action_config.json  ds_action_config.json  ds_observation_config.json  observation_config copy.json  observation_config.json
scripts/core/: EnvStonefishRL.py  launch_stonefish.py  old.py
scripts/core/util/: receiver.py
scripts/girona_ds/: ball_env.py  docking_env.py  evaluate_ds.py  football_env.py  plot.py  test_G500.py  test_docking_env.py  train_ds_SAC.py  train_ds_ppo.py
scripts/girona_ds/final_models/: football_evaluations.npz
scripts/girona_ds/logs/: SAC_evaluations.npz  data_display.ipynb  ppo_evaluations.npz
scripts/py_code/: receiver.py  test_receiver.py
src/: ActuatorController.cpp  CommandProcessor.cpp  ConfigLoader.cpp  Sender.cpp  StateManager.cpp  StonefishRL.cpp  ZQMCommunicator.cpp  main.cpp  test_sender.cpp
